Made pantheon_board_container absolute positioned to prevent it from being wrapped below the other boards during the game (for some unknown reason).

--- a/css/030 layout.css
+++ b/css/030 layout.css
@@ -129,3 +129,7 @@
     /* If one player has conspiracies and the other doesn't, make sure the narrower wonder div is aligned to the right.*/
     align-items: flex-end;
 }
+
+#board_middle_container {
+    position: relative; /* So the #pantheon_board_container can be positioned absolute */
+}
